adding stylized nb and picture for readme

--- a/FINAL_NB.ipynb
+++ b/FINAL_NB.ipynb
@@ -4,7 +4,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Produce Classification using Keras"
+    "# <h1><center>Produce Classification using Tensorflow</center></h1>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Banner](figures/banner.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Table of Contents\n",
+    "1. [Business Problem](#1)\n",
+    "2. [Data Analysis](#2)\n",
+    "3. [Modeling](#3)\n",
+    "4. [Analyzing Loss](#4)\n",
+    "5. [Recommendations](#5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### <a name=\"1\">Business Problem</a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Having reliable access to fresh produce is one of the most important selling points for grocery stores.Knowing this, I have been tasked by a local green grocer to implement a system that can quickly and accurately identify different produce. This will increase both the quality of produce being shipped in, as well as potentially speeding up the self-checkout experience, which will in turn increase customer turnaround during busy hours."
    ]
   },
   {
@@ -30,21 +63,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Business Problem"
+    "### <a name=\"2\">Data Analysis</a>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For me, checkout at a grocery store is always the biggest hassle of going. Will I remember any of the codes for the produce I commonly buy? I have been tasked by a local green grocer to implement an image classification application to identify and predict what produce is being scanned to increase efficiency and customer turnaround."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### EDA"
+    "ALL DATA SOURCED FROM: https://www.kaggle.com/datasets/moltean/fruits"
    ]
   },
   {
@@ -173,7 +199,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Modeling"
+    "### <a name=\"3\">Modeling</a>"
    ]
   },
   {
@@ -426,7 +452,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Analyzing Loss"
+    "### <a name=\"4\">Analyzing Loss</a>"
    ]
   },
   {
@@ -496,6 +522,22 @@
    "metadata": {},
    "source": [
     "It looks like our values cross right before where our final model is cut off, which is exactly where we want to be. I am confident that this model would be able to help grocery stores to identify produce quickly and efficiently, allowing more customer turnaround and thus more profit."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### <a name=\"5\">Recommendations</a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Implement my model to accurately predict different fruit and vegetables and increase customer turnaround.\n",
+    "- Set up scanners at the warehouse to check incoming produce for mold/rot.\n",
+    "- Set up a custom list of produce to create a more personalized classification system."
    ]
   },
   {
