--- a/FINAL_NB.ipynb
+++ b/FINAL_NB.ipynb
@@ -37,26 +37,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Having reliable access to fresh produce is one of the most important selling points for grocery stores.Knowing this, I have been tasked by a local green grocer to implement a system that can quickly and accurately identify different produce. This will increase both the quality of produce being shipped in, as well as potentially speeding up the self-checkout experience, which will in turn increase customer turnaround during busy hours."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import warnings\n",
-    "import pandas as pd\n",
-    "import seaborn as sns\n",
-    "import numpy as np\n",
-    "import gradio as gr\n",
-    "import matplotlib.pyplot as plt\n",
-    "import tensorflow as tf\n",
-    "import cv2\n",
-    "\n",
-    "%matplotlib inline\n",
-    "warnings.filterwarnings(\"ignore\")"
+    "Having reliable access to fresh produce is one of the most important selling points for grocery stores.Knowing this, I have been tasked by a local green grocer to implement a system that can quickly and accurately identify different produce. This will increase both the quality of produce being shipped in, as well as potentially speeding up the self-checkout experience, which will in turn increase customer turnaround."
    ]
   },
   {
@@ -77,7 +58,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Due to the nature of image classification, true EDA involves making sure your files and folders are set to split. I was fortunate enough to find a set of images that came pre-split, but I wanted to utilize some of Keras' built in preprocessing so I decided to  use their training set to split for myself."
+    "I utilized data sourced from the Fruits 360 datset on Kaggle (linked above). This contained over 65,000 images of fruits and vegetables in 131 different classes for identification. Because the data was pre split, I decided to use Keras' own preprocessing techniques to do a split of my own on their training folder. Preparing the images required me to convert them into Arrays of numbers that Tensorflow can then interpret and make predictions based off of."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Basic imports\n",
+    "import warnings\n",
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "import numpy as np\n",
+    "import gradio as gr\n",
+    "import matplotlib.pyplot as plt\n",
+    "import tensorflow as tf\n",
+    "import cv2\n",
+    "\n",
+    "%matplotlib inline\n",
+    "warnings.filterwarnings(\"ignore\")"
    ]
   },
   {
