--- a/FINAL_NB.ipynb
+++ b/FINAL_NB.ipynb
@@ -37,7 +37,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Having reliable access to fresh produce is one of the most important selling points for grocery stores.Knowing this, I have been tasked by a local green grocer to implement a system that can quickly and accurately identify different produce. This will increase both the quality of produce being shipped in, as well as potentially speeding up the self-checkout experience, which will in turn increase customer turnaround."
+    "Having reliable access to fresh produce is one of the most important selling points for grocery stores.Knowing this, I have been tasked by a local green grocer, Four Corners Marketplace, to implement a system that can quickly and accurately identify different produce. This will increase both the quality of produce being shipped in, as well as potentially speeding up the self-checkout experience, which will in turn increase customer turnaround."
    ]
   },
   {
@@ -72,7 +72,6 @@
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import numpy as np\n",
-    "import gradio as gr\n",
     "import matplotlib.pyplot as plt\n",
     "import tensorflow as tf\n",
     "import cv2\n",
