--- a/FINAL_NB.ipynb
+++ b/FINAL_NB.ipynb
@@ -537,7 +537,8 @@
    "source": [
     "- Implement my model to accurately predict different fruit and vegetables and increase customer turnaround.\n",
     "- Set up scanners at the warehouse to check incoming produce for mold/rot.\n",
-    "- Set up a custom list of produce to create a more personalized classification system."
+    "- Set up a custom list of produce to create a more personalized classification system.\n",
+    "- Create a system to keep up with new/removed inventory items."
    ]
   },
   {
